# cakedefi-kryptosekken-converter

./: .gitignore  LICENSE  README.md  process_transactions.py  pyproject.toml
input/: README.md
src/: balance_tracker.py  constants.py  currency_converter.py  kryptosekken_formatter.py  kryptosekken_validator.py  main_processor.py  models.py  operation_mapper.py  transaction_grouper.py
tests/: conftest.py  test_balance_tracker.py  test_currency_converter.py  test_kryptosekken_formatter.py  test_kryptosekken_validator.py  test_main_processor.py  test_models.py  test_operation_mapper.py  test_transaction_grouper.py
